--- a/CSGO/CSGO/CSGO.vcxproj
+++ b/CSGO/CSGO/CSGO.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="Source\Features\Awareness\noflash.h" />
     <ClInclude Include="Source\Features\Awareness\radar.h" />
     <ClInclude Include="Source\Features\Combat\recoilcontrol.h" />
+    <ClInclude Include="Source\Features\Combat\trigger.h" />
     <ClInclude Include="Source\Features\Miscellaneous\fov.h" />
     <ClInclude Include="Source\global.h" />
     <ClInclude Include="Source\debug.h" />
@@ -38,6 +39,7 @@
     <ClCompile Include="Source\Features\Awareness\noflash.cpp" />
     <ClCompile Include="Source\Features\Awareness\radar.cpp" />
     <ClCompile Include="Source\Features\Combat\recoilcontrol.cpp" />
+    <ClCompile Include="Source\Features\Combat\trigger.cpp" />
     <ClCompile Include="Source\Features\Miscellaneous\fov.cpp" />
     <ClCompile Include="Source\global.cpp" />
     <ClCompile Include="Source\debug.cpp" />
