--- a/CSGO/CSGO/CSGO.vcxproj.filters
+++ b/CSGO/CSGO/CSGO.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="Source\Features\Miscellaneous\airstuck.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Features\Awareness\sonar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\global.cpp">
@@ -111,6 +114,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\Features\Miscellaneous\airstuck.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Features\Awareness\sonar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
