--- a/CSGO/CSGO/CSGO.vcxproj
+++ b/CSGO/CSGO/CSGO.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="Source\Features\Combat\recoilcontrol.h" />
     <ClInclude Include="Source\Features\Combat\trigger.h" />
     <ClInclude Include="Source\Features\Miscellaneous\airstuck.h" />
+    <ClInclude Include="Source\Features\Miscellaneous\fakelag.h" />
     <ClInclude Include="Source\Features\Miscellaneous\fov.h" />
     <ClInclude Include="Source\global.h" />
     <ClInclude Include="Source\debug.h" />
@@ -44,6 +45,7 @@
     <ClCompile Include="Source\Features\Combat\recoilcontrol.cpp" />
     <ClCompile Include="Source\Features\Combat\trigger.cpp" />
     <ClCompile Include="Source\Features\Miscellaneous\airstuck.cpp" />
+    <ClCompile Include="Source\Features\Miscellaneous\fakelag.cpp" />
     <ClCompile Include="Source\Features\Miscellaneous\fov.cpp" />
     <ClCompile Include="Source\global.cpp" />
     <ClCompile Include="Source\debug.cpp" />
