--- a/CSGO/CSGO/CSGO.vcxproj
+++ b/CSGO/CSGO/CSGO.vcxproj
@@ -27,22 +27,12 @@
     <ClInclude Include="Source\Features\Miscellaneous\airstuck.h" />
     <ClInclude Include="Source\Features\Miscellaneous\fakelag.h" />
     <ClInclude Include="Source\Features\Miscellaneous\fov.h" />
-    <ClInclude Include="Source\Global\defines.h" />
-    <ClInclude Include="Source\Global\enums.h" />
-    <ClInclude Include="Source\Global\functions.h" />
-    <ClInclude Include="Source\Global\Game\gameclasses.h" />
-    <ClInclude Include="Source\Global\Game\gamedefines.h" />
-    <ClInclude Include="Source\Global\Game\gameenums.h" />
-    <ClInclude Include="Source\Global\Game\gamestructs.h" />
-    <ClInclude Include="Source\Global\Game\gametypedefs.h" />
-    <ClInclude Include="Source\Global\debug.h" />
-    <ClInclude Include="Source\Global\structs.h" />
-    <ClInclude Include="Source\Global\typedefs.h" />
+    <ClInclude Include="Source\Features\engine.h" />
+    <ClInclude Include="Source\Program\global.h" />
     <ClInclude Include="Source\Program\general.h" />
     <ClInclude Include="Source\Program\config.h" />
     <ClInclude Include="Source\Program\interface.h" />
     <ClInclude Include="Source\Program\memory.h" />
-    <ClInclude Include="Source\Global\Game\gameengine.h" />
     <ClInclude Include="Source\Features\Miscellaneous\hitsound.h" />
     <ClInclude Include="Source\Features\Miscellaneous\automation.h" />
     <ClInclude Include="Source\dllmain.h" />
@@ -56,16 +46,12 @@
     <ClCompile Include="Source\Features\Miscellaneous\airstuck.cpp" />
     <ClCompile Include="Source\Features\Miscellaneous\fakelag.cpp" />
     <ClCompile Include="Source\Features\Miscellaneous\fov.cpp" />
-    <ClCompile Include="Source\Global\functions.cpp" />
-    <ClCompile Include="Source\Global\Game\gameclasses.cpp" />
-    <ClCompile Include="Source\Global\Game\gamestructs.cpp" />
-    <ClCompile Include="Source\Global\debug.cpp" />
-    <ClCompile Include="Source\Global\structs.cpp" />
+    <ClCompile Include="Source\Features\engine.cpp" />
+    <ClCompile Include="Source\Program\global.cpp" />
     <ClCompile Include="Source\Program\general.cpp" />
     <ClCompile Include="Source\Program\config.cpp" />
     <ClCompile Include="Source\Program\interface.cpp" />
     <ClCompile Include="Source\Program\memory.cpp" />
-    <ClCompile Include="Source\Global\Game\gameengine.cpp" />
     <ClCompile Include="Source\Features\Miscellaneous\hitsound.cpp" />
     <ClCompile Include="Source\Features\Miscellaneous\automation.cpp" />
     <ClCompile Include="Source\dllmain.cpp" />
@@ -125,12 +111,16 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <TargetExt>.exe</TargetExt>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -143,7 +133,10 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;CSGO_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <DisableSpecificWarnings>4100;%(DisableSpecificWarnings)</DisableSpecificWarnings>
-      <AdditionalOptions>/analyze:stacksize94564 %(AdditionalOptions)</AdditionalOptions>
+      <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
+      <EnablePREfast>true</EnablePREfast>
+      <ShowIncludes>false</ShowIncludes>
+      <AdditionalOptions>/analyze:stacksize47292</AdditionalOptions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -169,20 +162,26 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <WarningLevel>Level4</WarningLevel>
+      <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;CSGO_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <BasicRuntimeChecks>
+      </BasicRuntimeChecks>
+      <EnablePREfast>true</EnablePREfast>
+      <AdditionalOptions>/analyze:stacksize47292</AdditionalOptions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
+      <AdditionalDependencies>Winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
