--- a/Loader/Loader.vcxproj
+++ b/Loader/Loader.vcxproj
@@ -143,6 +143,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Loader Source\Application\global.cpp" />
+    <ClCompile Include="Loader Source\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Loader Source\Application\global.h" />
+    <ClInclude Include="Loader Source\main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
