--- a/Paladin Loader/Paladin Loader.vcxproj
+++ b/Paladin Loader/Paladin Loader.vcxproj
@@ -89,12 +89,13 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <UACExecutionLevel>HighestAvailable</UACExecutionLevel>
-      <AdditionalDependencies>libcurl.lib;Ws2_32.lib;wldap32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -143,13 +144,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Loader Source\Application\global.cpp" />
-    <ClCompile Include="Loader Source\Application\interface.cpp" />
     <ClCompile Include="Loader Source\Application\program.cpp" />
     <ClCompile Include="Loader Source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Loader Source\Application\global.h" />
-    <ClInclude Include="Loader Source\Application\interface.h" />
     <ClInclude Include="Loader Source\Application\program.h" />
     <ClInclude Include="Loader Source\main.h" />
   </ItemGroup>
